--- a/style.css
+++ b/style.css
@@ -1,17 +1,30 @@
 body {
-    margin: 0;
-    padding: 0;
-    height: 100vh;
-    background:linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("resources/background.jpg") no-repeat center center fixed;
-    background-size: cover;
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("resources/background.jpg") no-repeat center center fixed;
+  background-size: cover;
 }
+
 .container {
   min-height: 100vh;
-  
-  display: flex;
+  display:flex;
   justify-content: center;
   align-items: center;
   padding: 20px;
+  opacity: 0;
+  transform: translateY(60px);
+  animation: slideUp 5s cubic-bezier(0.25, 0.8, 0.25, 1) forwards;
+}
+@keyframes slideUp {
+  0% {
+    opacity: 0;
+    transform: translateY(40px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 .calculator {
@@ -46,6 +59,7 @@ body {
   grid-template-columns: 1fr 1fr;
   gap: 30px;
 }
+
 .loan-text {
   color: #ffffff;
   font-size: 1.5rem;
@@ -57,12 +71,12 @@ body {
   justify-content: center;
   padding: 10px;
   margin: 25px;
- 
-  
+
+
 }
 
 .input-section {
-    padding: 10px;
+  padding: 10px;
   padding-right: 80px;
   border-right: 1px solid #9aa5b3;
 }
@@ -102,10 +116,10 @@ body {
   color: #718096;
 }
 
-button {
+#calculateBtn {
   width: 100%;
   padding: 15px;
-  background: #2c3e50;
+  background: #223c56;
   color: white;
   border: none;
   border-radius: 8px;
@@ -119,9 +133,37 @@ button {
   margin: 25px;
 }
 
-button:hover {
+#calculateBtn:hover {
   background: #1a252f;
   transform: translateY(-2px);
+}
+
+#resetBtn {
+  width: 100%;
+  padding: 15px;
+  background: #1d5b99;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 6px;
+  margin: 25px;
+}
+#resetBtn i{
+  display: inline-block;
+  transition: transform 0.5s ease;
+}
+#resetBtn:hover{
+  background: #1a252f;
+  transform: translateY(-4px);
+}
+#resetBtn:hover  i{
+ transform: rotate(360deg);
 }
 
 .results {
@@ -170,25 +212,25 @@ button:hover {
 }
 
 .footer {
-    background: linear-gradient(135deg, #1a1a1a3b, #2c3e5060);
-    color: #ECECEB;
-    padding: 1rem;
-    text-align: center;
+  background: linear-gradient(135deg, #1a1a1a3b, #2c3e5060);
+  color: #ECECEB;
+  padding: 1rem;
+  text-align: center;
 }
 
 .social-links {
-    margin-top: 1rem;
+  margin-top: 1rem;
 }
 
 .social-links a {
-    color: #ECECEB;
-    margin: 0 0.5rem;
-    font-style: 1.5rem;
-    transition: color 0.3s;
+  color: #ECECEB;
+  margin: 0 0.5rem;
+  font-style: 1.5rem;
+  transition: color 0.3s;
 }
 
 .social-links a:hover {
-    color: #a19f9f;
+  color: #a19f9f;
 }
 
 
@@ -204,25 +246,27 @@ button:hover {
     border-bottom: 1px solid #e2e8f0;
     padding-bottom: 30px;
   }
-  .calculator{
+
+  .calculator {
     background: rgba(255, 255, 255, 0.644);
     box-shadow: 0 0 5px rgba(44, 62, 80, 0.382);
   }
+
   .calculator-header {
-  background: linear-gradient(135deg, #011a34be, #2c3e508e);
-  padding: 30px;
-  text-align: center;
-  color: white;
-   }
-   .subtitle {
-  color: #2cc2f3f2;
-  font-size: 1rem;
+    background: linear-gradient(135deg, #011a34be, #2c3e508e);
+    padding: 30px;
+    text-align: center;
+    color: white;
   }
+
+  .subtitle {
+    color: #2cc2f3f2;
+    font-size: 1rem;
+  }
+
   .input-group label {
 
-  color: #153060;
+    color: #153060;
 
-}
-
-
+  }
 }
